@@ -6,15 +6,15 @@ package com.wynntils.features.user;
 
 import com.google.common.collect.Sets;
 import com.google.gson.reflect.TypeToken;
-import com.wynntils.core.chat.ChatModel;
 import com.wynntils.core.chat.RecipientType;
 import com.wynntils.core.chat.tabs.ChatTab;
-import com.wynntils.core.chat.tabs.ChatTabModel;
 import com.wynntils.core.config.Config;
 import com.wynntils.core.config.ConfigHolder;
 import com.wynntils.core.config.TypeOverride;
 import com.wynntils.core.features.UserFeature;
 import com.wynntils.core.managers.Model;
+import com.wynntils.core.managers.Models;
+import com.wynntils.gui.widgets.ChatTabAddButton;
 import com.wynntils.gui.widgets.ChatTabButton;
 import com.wynntils.mc.event.ChatScreenKeyTypedEvent;
 import com.wynntils.mc.event.ClientsideMessageEvent;
@@ -26,7 +26,7 @@ import com.wynntils.wynn.event.ChatMessageReceivedEvent;
 import com.wynntils.wynn.event.WorldStateEvent;
 import com.wynntils.wynn.model.WorldStateManager;
 import java.lang.reflect.Type;
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 import net.minecraft.client.gui.screens.ChatScreen;
 import net.minecraftforge.eventbus.api.EventPriority;
@@ -37,24 +37,24 @@ public class ChatTabsFeature extends UserFeature {
     public static ChatTabsFeature INSTANCE;
 
     @Config(visible = false)
-    public List<ChatTab> chatTabs = Arrays.asList(
+    public List<ChatTab> chatTabs = new ArrayList<>(List.of(
             new ChatTab("All", false, null, null, null),
             new ChatTab("Global", false, null, Sets.newHashSet(RecipientType.GLOBAL), null),
             new ChatTab("Local", false, null, Sets.newHashSet(RecipientType.LOCAL), null),
             new ChatTab("Guild", false, "/g ", Sets.newHashSet(RecipientType.GUILD), null),
             new ChatTab("Party", false, "/p ", Sets.newHashSet(RecipientType.PARTY), null),
             new ChatTab("Private", false, "/r ", Sets.newHashSet(RecipientType.PRIVATE), null),
-            new ChatTab("Shout", false, null, Sets.newHashSet(RecipientType.SHOUT), null));
+            new ChatTab("Shout", false, null, Sets.newHashSet(RecipientType.SHOUT), null)));
 
     @TypeOverride
-    private final Type chatTabsType = new TypeToken<List<ChatTab>>() {}.getType();
+    private final Type chatTabsType = new TypeToken<ArrayList<ChatTab>>() {}.getType();
 
     @Override
-    public List<Class<? extends Model>> getModelDependencies() {
-        return List.of(ChatModel.class, ChatTabModel.class);
+    public List<Model> getModelDependencies() {
+        return List.of(Models.Chat, Models.ChatTab);
     }
 
-    // We do this here, and not in ChatTabModel to not introduce a feature-model dependency.
+    // We do this here, and not in Models.ChatTab to not introduce a feature-model dependency.
     @SubscribeEvent(priority = EventPriority.LOWEST)
     public void onChatReceived(ChatMessageReceivedEvent event) {
         // Firstly, find the FIRST matching tab with high priority
@@ -62,7 +62,7 @@ public class ChatTabsFeature extends UserFeature {
             if (!chatTab.isConsuming()) continue;
 
             if (chatTab.matchMessageFromEvent(event)) {
-                ChatTabModel.addMessageToTab(chatTab, event.getMessage());
+                Models.ChatTab.addMessageToTab(chatTab, event.getMessage());
                 return;
             }
         }
@@ -72,7 +72,7 @@ public class ChatTabsFeature extends UserFeature {
             if (chatTab.isConsuming()) continue;
 
             if (chatTab.matchMessageFromEvent(event)) {
-                ChatTabModel.addMessageToTab(chatTab, event.getMessage());
+                Models.ChatTab.addMessageToTab(chatTab, event.getMessage());
             }
         }
 
@@ -87,7 +87,7 @@ public class ChatTabsFeature extends UserFeature {
             if (!chatTab.isConsuming()) continue;
 
             if (chatTab.matchMessageFromEvent(event)) {
-                ChatTabModel.addMessageToTab(chatTab, event.getComponent());
+                Models.ChatTab.addMessageToTab(chatTab, event.getComponent());
                 return;
             }
         }
@@ -97,7 +97,7 @@ public class ChatTabsFeature extends UserFeature {
             if (chatTab.isConsuming()) continue;
 
             if (chatTab.matchMessageFromEvent(event)) {
-                ChatTabModel.addMessageToTab(chatTab, event.getComponent());
+                Models.ChatTab.addMessageToTab(chatTab, event.getComponent());
             }
         }
 
@@ -110,6 +110,9 @@ public class ChatTabsFeature extends UserFeature {
         if (event.getScreen() instanceof ChatScreen chatScreen) {
             int xOffset = 0;
 
+            chatScreen.addRenderableWidget(new ChatTabAddButton(xOffset + 2, chatScreen.height - 35, 12, 13));
+            xOffset += 15;
+
             for (ChatTab chatTab : chatTabs) {
                 chatScreen.addRenderableWidget(new ChatTabButton(xOffset + 2, chatScreen.height - 35, 40, 13, chatTab));
                 xOffset += 43;
@@ -121,9 +124,9 @@ public class ChatTabsFeature extends UserFeature {
     public void onWorldStateChange(WorldStateEvent event) {
         if (event.getNewState() == WorldStateManager.State.WORLD
                 && !chatTabs.isEmpty()
-                && ChatTabModel.getFocusedTab() == null) {
+                && Models.ChatTab.getFocusedTab() == null) {
             // We joined wynn, time to override our focused tab.
-            ChatTabModel.setFocusedTab(chatTabs.get(0));
+            Models.ChatTab.setFocusedTab(chatTabs.get(0));
         }
     }
 
@@ -144,21 +147,21 @@ public class ChatTabsFeature extends UserFeature {
         if (!KeyboardUtils.isShiftDown()) return;
 
         event.setCanceled(true);
-        ChatTabModel.setFocusedTab(
-                chatTabs.get((chatTabs.indexOf(ChatTabModel.getFocusedTab()) + 1) % chatTabs.size()));
+        Models.ChatTab.setFocusedTab(
+                chatTabs.get((chatTabs.indexOf(Models.ChatTab.getFocusedTab()) + 1) % chatTabs.size()));
     }
 
     @Override
     protected void postEnable() {
         if (chatTabs.isEmpty()) return;
 
-        ChatTabModel.setFocusedTab(chatTabs.get(0));
+        Models.ChatTab.setFocusedTab(chatTabs.get(0));
     }
 
     @Override
     protected void onConfigUpdate(ConfigHolder configHolder) {
         if (!chatTabs.isEmpty()) {
-            ChatTabModel.setFocusedTab(chatTabs.get(0));
+            Models.ChatTab.setFocusedTab(chatTabs.get(0));
         }
 
         if ((McUtils.mc().screen instanceof ChatScreen chatScreen)) {
